infrastructure/k8s/ingredients-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredients-service
  labels:
    app: ingredients-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingredients-service
  template:
    metadata:
      labels:
        app: ingredients-service
    spec:
      containers:
        - name: ingredients-service
          image: scan-n-eat/ingredients-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20

          # --- RESOURCES ---
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
