infrastructure/k8s/recipe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-service
  labels:
    app: recipe-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-service
  template:
    metadata:
      labels:
        app: recipe-service
    spec:
      containers:
        - name: recipe-service
          image: scan-n-eat/recipe-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
